# dystopia

./: .gitignore
address_book/: CMakeLists.txt
address_book/inc/: address_book.h  book.h  book.xml  bookAdaptor.cpp  bookAdaptor.h  bookInterface.cpp  bookInterface.h
address_book/src/: address_book.cpp  address_book_form.ui  book.cpp  main.cpp  person.cpp
dbus_comm/: CMakeLists.txt  comm_client.cpp  comm_client.h  comm_client.ui  dbus_comm.pro  dbus_comm_main.cpp  message.cpp
dbus_comm/dbuslib/: CMakeLists.txt  comm_client_bind.c  comm_client_bind.h  comm_dbus.c  comm_dbus.h  comm_interface.xml  common-defs.h
dbus_comm/inc/: book.xml  bookInterface.h  message.h  payload.h  person.h
dbus_comm/server/: comm_server.cpp
